quick fixes and removing instanceof